# ncode-ext

./: .gitignore  National Number Extractor.spec  README.md  extract.ps1  pextract.py  pextract.spec  pyproject.toml  requirements.txt  test_pextract.py  version.rc
.github/workflows/: build-and-release.yml
tests/: test_pextract.py
