[project]
name = "ncode-ext"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "imageio>=2.37.0",
    "nuitka>=2.6.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "persian-tools>=0.0.11",
    "pyinstaller>=6.12.0",
    "tqdm>=4.67.1",
]
